# privatedoc-rag

./: .gitignore  README.md  pyproject.toml
app/: config.py  database.py  main.py
app/api/: document.py  health.py
app/models/: document.py
app/pipeline/chunking/: base.py  fixed_chunker.py  models.py
app/pipeline/cleaning/: base.py  models.py  text_cleaner.py
app/pipeline/embeddings/: base.py  exception.py  factory.py  models.py  ollama_emdedder.py
app/pipeline/extraction/: base.py  docx_extractor.py  factory.py  markdown_extractor.py  models.py  pdf_extractor.py  pptx_extractor.py  txt_extractor.py
app/schemas/: document_schema.py
app/services/: document_service.py
app/utils/: file_utils.py  id_id_utils.py  logging_utils.py
tests/pipeline/: test_chunk_models.py  test_factor.py  test_fixed_chunker.py  test_pdf_extractor.py  test_text_cleaner.py
tests/pipeline/unit_tests/: test_base_embedder.py  test_chunk_models.py  test_cleaner_base.py  test_embedding_models.py  test_exceptions.py  test_fixed_chunker.py  test_text_cleaner.py
